<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
                app:layout_constraintEnd_toEndOf="@+id/materialCardView"
                app:layout_constraintStart_toStartOf="@+id/materialCardView"
                app:layout_constraintTop_toTopOf="@+id/materialCardView" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/light_blue"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/gpsCV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        app:strokeWidth="1dp"
                        android:visibility="invisible"
                        app:strokeColor="#D21414"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp">

                            <ImageView
                                android:id="@+id/gpsWarning"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_baseline_warning_24"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/enableGPS"
                                app:layout_constraintEnd_toEndOf="@+id/gpsWarning"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/gpsWarning" />



                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.card.MaterialCardView>


                    <TextView
                        android:id="@+id/locTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="24sp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/weatherTypeTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/testWeatherType"
                        android:textSize="12sp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="@+id/locTV"
                        app:layout_constraintStart_toStartOf="@+id/locTV"
                        app:layout_constraintTop_toBottomOf="@+id/locTV" />

                    <TextView
                        android:id="@+id/tempTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/testTemp"
                        android:textSize="30sp"
                        android:layout_marginTop="40dp"
                        app:layout_constraintEnd_toEndOf="@+id/weatherTypeTV"
                        app:layout_constraintStart_toStartOf="@+id/weatherTypeTV"
                        app:layout_constraintTop_toBottomOf="@+id/weatherTypeTV" />

                    <TextView
                        android:id="@+id/humidityTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/humidity"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="@+id/tempTV"
                        app:layout_constraintStart_toStartOf="@+id/tempTV"
                        app:layout_constraintTop_toBottomOf="@+id/tempTV" />

                    <TextView
                        android:id="@+id/dateTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/testTime"
                        android:textSize="12sp"
                        android:layout_margin="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/new_yorkMCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/materialCardView"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"
                app:strokeColor="@color/light_blue"
                app:strokeWidth="2dp">

                <TextView
                    android:id="@+id/newYorkBut"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/new_york"
                    android:textSize="16sp" />


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mumbaiMCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/new_yorkMCV"
                app:layout_constraintTop_toBottomOf="@+id/new_yorkMCV"
                app:strokeColor="@color/light_blue"
                app:strokeWidth="2dp">

                <TextView
                    android:id="@+id/mumbaiBut"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/mumbai"
                    android:textSize="16sp" />


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/delhiMCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/mumbaiMCV"
                app:layout_constraintTop_toBottomOf="@+id/mumbaiMCV"
                app:strokeColor="@color/light_blue"
                app:strokeWidth="2dp">

                <TextView
                    android:id="@+id/delhiBut"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/delhi"
                    android:textSize="16sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/sydneyMCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/delhiMCV"
                app:layout_constraintTop_toBottomOf="@+id/delhiMCV"
                app:strokeColor="@color/light_blue"
                app:strokeWidth="2dp">

                <TextView
                    android:id="@+id/sydneyBut"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/sydney"
                    android:textSize="16sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/melbourneMCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/sydneyMCV"
                app:layout_constraintTop_toBottomOf="@+id/sydneyMCV"
                app:strokeColor="@color/light_blue"
                app:strokeWidth="2dp">

                <TextView
                    android:id="@+id/melbourneBut"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/melbourne"
                    android:textSize="16sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/singaporeMCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/melbourneMCV"
                app:layout_constraintTop_toBottomOf="@+id/melbourneMCV"
                app:strokeColor="@color/light_blue"
                app:strokeWidth="2dp">

                <TextView
                    android:id="@+id/singaporeBut"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/singapore"
                    android:textSize="16sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/refreshBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_refresh_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>